--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            background-image: url("./vg99.jpg");
+        }
+
+        
+        *{
+            /* background-image: url(https://www.google.com/url?sa=i&url=https%3A%2F%2Fpngtree.com%2Ffree-backgrounds-photos%2Fwebsite&psig=AOvVaw0FEx_2yaqGqxyHLxOTV7f3&ust=1701347140330000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCLji2ZGa6YIDFQAAAAAdAAAAABAD); */
+        }
         #c {
             text-align: left;
             margin: auto;
@@ -15,8 +23,8 @@
         #m{
             margin-left: 100px;
             border-radius: 20px;
-            height: 170px;
-            width: 170px;
+            height: 200px;
+            width: 300px;
         }
         #b{
             margin-left: 80px;
