--- a/list.html
+++ b/list.html
@@ -30,6 +30,12 @@
         <li>Wine</li>
     </ol>
 
+    <ol type="a">
+        <li>Coffe</li>
+        <li>Tea</li>
+        <li>Wine</li>
+    </ol>
+
     <ol type="i">
         <li>Coffe</li>
         <li>Tea</li>
