--- a/self.html
+++ b/self.html
@@ -14,10 +14,9 @@
         #main{
             height: 500px;
             width: 100%;
-        }
-        
+        }  
         *{
-            background-color: aquamarine;
+            background-color: rgb(105, 222, 237);
         }
         #c {
             text-align: left;
@@ -26,10 +25,16 @@
             font-size: 40px;
         }
         #c:hover{
+            border : coral 2px solid;
+            background-color: black;
+            color: rgb(248, 248, 248);
+            transition: 1s;
+            border-radius: 10%;
+            border-width: 40px;
 
         }
         #m{
-            margin: 65px;
+            margin: 50px;
             border-radius: 20px;
             height: 300px;
             width: 300px;
@@ -38,8 +43,7 @@
         }
         #b{
             margin-left: 80px;
-        }
-        
+        } 
     </style>
 </head>
 
@@ -49,7 +53,7 @@
         <marquee direction="right"><b><u><h1 style="color: brown;">EXPLORE MOODBIDRE!!!</u></b></h1>
         </marquee>
         <ol type="1">
-            <li id="c">Kodyadka Temple</li>
+            <li id="c"><a href="https://www.google.com/maps/place/Hosanadu+Kodyadka+Annapoorneshwari+Temple/@13.092192,74.9509988,17z/data=!3m1!4b1!4m6!3m5!1s0x3ba3554dafccad55:0xe8e4e4e66c89092d!8m2!3d13.0921868!4d74.9535737!16s%2Fg%2F1hfny5f_m?entry=ttu">Kodyadka Temple</a></li>
             <table>
             <tr>
                 <td ><img src="./kd1.jpg" alt=""  id="m"></td>
@@ -57,7 +61,7 @@
                 <td ><img src="./kd1.jpg" alt="" id="m"></td>
             </tr>
             </table>
-            <li id="c">Vidhyagiri</li>
+            <li id="c"><a href="">Vidhyagiri</a></li>
             <table>
             <tr>
                 <td ><img src="./vg.jpg" alt="" id="m"></td>
