--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         body{
-            background-image: url("./vg99.jpg");
+            background-color: aqua;
         }
 
         
