--- a/ex2.html
+++ b/ex2.html
@@ -14,7 +14,7 @@
     <h1><b>demonstration of checkbox</b></h1>
     <input type="checkbox">Palav
     <input type="checkbox">Dosa
-    <input type="checkbox">Idli
+    <input type="checkbox">Idly
     <input type="checkbox">Veg Meals <br>
     <h1><b>demonstration of Radio buttons</b></h1>
     <input type="radio" name="label">Engineering
