--- a/ex2.html
+++ b/ex2.html
@@ -8,7 +8,7 @@
 <body>
     <form action="">
     <h1><b>demonstration of Input tags</b></h1>
-    Nmae: <input type="text" placeholder="Name"><br>
+    Name: <input type="text" placeholder="Name"><br>
     password: <input type="text" placeholder="Password"><br>
     Phone: <input type="number" placeholder="Phone"><br>
     <h1><b>demonstration of checkbox</b></h1>
