--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         body{
-            background-color: aqua;
+            background-image: url("./vg99.jpg");
         }
 
         
@@ -54,7 +54,7 @@
                 <td ><img src="./vg3.jpg" alt="" id="m"></td>
             </tr>
         </ol>
- <a href="./bootsrap.html">Bootstrap</a>
+    
 
 </body>
 
