--- a/self.html
+++ b/self.html
@@ -25,8 +25,8 @@
             font-size: 40px;
         }
         #c:hover{
-            border : blue 2px solid;
-            background-color: aqua;
+            border : coral 2px solid;
+            background-color: black;
             color: rgb(248, 248, 248);
             transition: 1s;
             border-radius: 10%;
